--- a/project/css/style.css
+++ b/project/css/style.css
@@ -16,3 +16,11 @@
 	border-bottom: 3px solid !important;
 	border-bottom-color: black !important;
 }
+.login > input:focus {
+    outline: none !important;
+    border:1px solid black !important;
+    box-shadow: 0 0 10px #719ECE !important;
+}
+.active:hover {
+	background-color: black !important;
+}
