--- a/project/css/style.css
+++ b/project/css/style.css
@@ -21,9 +21,10 @@
     border:1px solid black !important;
     box-shadow: 0 0 10px #719ECE !important;
 }
-.active:hover {
-	background-color: black !important;
-}
 a {
 	text-decoration: none;
+}
+.content {
+	margin-top: 2%;
+	font-size: 1.2em;
 }
