--- a/tajam/css/fontello.css
+++ b/tajam/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?54947391');
-  src: url('../font/fontello.eot?54947391#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?54947391') format('woff2'),
-       url('../font/fontello.woff?54947391') format('woff'),
-       url('../font/fontello.ttf?54947391') format('truetype'),
-       url('../font/fontello.svg?54947391#fontello') format('svg');
+  src: url('../font/fontello.eot?91091148');
+  src: url('../font/fontello.eot?91091148#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?91091148') format('woff2'),
+       url('../font/fontello.woff?91091148') format('woff'),
+       url('../font/fontello.ttf?91091148') format('truetype'),
+       url('../font/fontello.svg?91091148#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?54947391#fontello') format('svg');
+    src: url('../font/fontello.svg?91091148#fontello') format('svg');
   }
 }
 */
@@ -55,5 +55,13 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-location:before { content: '\e800'; } /* '' */
+.icon-phone:before { content: '\e801'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-gplus:before { content: '\f0d5'; } /* '' */
 .icon-left:before { content: '\f104'; } /* '' */
 .icon-right:before { content: '\f105'; } /* '' */
+.icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-dribbble:before { content: '\f17d'; } /* '' */
