--- a/tajam/sass/style.sass
+++ b/tajam/sass/style.sass
@@ -94,7 +94,7 @@ li.slick-active
 		padding-top: 25px
 	&-button
 		margin-top: 3em
-		font-family: HammersmithOne
+		font-family: 'Hammersmith One'
 		color:  #00e0d0
 		font-size: 1em
 		font-weight: 400
@@ -130,7 +130,7 @@ li.slick-active
 		padding-top: 1.875rem
 	&-button 
 		margin-top: 1.875em
-		font-family: HammersmithOne
+		font-family: 'Hammersmith One'
 		color:  #00e0d0
 		font-size: 1em
 		font-weight: 400
@@ -259,7 +259,7 @@ li.slick-active
 		margin-top: .8em
 	&-button
 		margin-top: 1em
-		font-family: HammersmithOne
+		font-family: 'Hammersmith One'
 		color:  #00e0d0
 		font-size: 1em
 		font-weight: 400
@@ -291,7 +291,7 @@ li.slick-active
 		height: 200px
 	&-button
 		margin-top: 1em
-		font-family: HammersmithOne
+		font-family: 'Hammersmith One'
 		color:  #00e0d0
 		font-size: 1em
 		font-weight: 400
@@ -317,7 +317,7 @@ li.slick-active
 		background: linear-gradient(90deg, #09052f 0%, #311d5e 100%)
 		opacity: 0.8
 		width: 100%
-		height: 100%
+		min-height: 100%
 	&-item
 		outline: 0
 	&-quote
@@ -361,8 +361,161 @@ li.slick-active
 		height: 60px
 		display: block
 		margin: 0 auto
+		max-width: 100%
+		height: auto
+.contact
+	&-header
+		font-family: PlayfairDisplay
+		color:  rgba(65, 61, 75, 0.5)
+		font-size: 1.375em
+		font-weight: 700
+		text-align: left
+		text-transform: uppercase
+	&-form input, &-form textarea
+		width: 90%
+		border: 1px solid #000000
+		opacity: 0.4
+		padding: 10px 20px
+		margin: 10px 0
+		font-family: Roboto
+		color:  rgba(65, 61, 75, 0.5)
+		font-size: 1.2em
+		font-weight: 300
+		text-align: left
+	&-button
+		background: none
+		font-family: 'Hammersmith One'
+		color: #00e0d0
+		font-size: 1em
+		font-weight: 400
+		text-align: center
+		text-transform: uppercase
+		border-radius: 2px
+		border-width: 1px
+		border-color:  #00e0d0
+		border-style: solid
+		padding: 10px 30px
+.client
+	&-header
+		font-family: PlayfairDisplay
+		color:  rgba(65, 61, 75, 0.5)
+		font-size: 1.375em
+		font-weight: 700
+		text-align: left
+		text-transform: uppercase
+		padding-left: 1.1rem
+	&-img
+		display: block
+		margin: 0 auto
+.footer
+	background: #fff url(../img/footer-bg.jpg) top center no-repeat
+	background-size: cover
+	width: 100%
+	min-height: 360px
+	position: relative
+	&-wrapper
+		background: -webkit-linear-gradient(0deg, #09052f 0%, #311d5e 100%)
+		background: -moz-linear-gradient(0deg, #09052f 0%, #311d5e 100%)
+		background: -o-linear-gradient(0deg, #09052f 0%, #311d5e 100%)
+		background: -ms-linear-gradient(0deg, #09052f 0%, #311d5e 100%)
+		background: linear-gradient(90deg, #09052f 0%, #311d5e 100%)
+		opacity: 0.8
+		width: 100%
+		min-height: 100%
+	&-header
+		font-family: Roboto
+		color:  #ffffff
+		font-size: 0.938em
+		font-weight: 900
+		line-height: 1.733
+		text-align: left
+		text-transform: uppercase
+	&-about
+		font-family: Roboto
+		color:  #ffffff
+		font-size: 0.875em
+		font-weight: 300
+		line-height: 1.857
+		text-align: left
+		padding-right: 30px
+		margin-top: 1.5rem
+	&-location
+		display: inline-block
+		vertical-align: top
+		font-family: Roboto
+		color: #ffffff
+		font-size: 0.875em
+		font-weight: 300
+		line-height: 1.857
+		text-align: left
+		padding-left: 0.123rem
+	&-phone
+		display: inline-block
+		font-family: Roboto
+		color: #ffffff
+		font-size: 0.875em
+		font-weight: 300
+		line-height: 1.857
+		text-align: left
+		padding-left: 0.333rem
+	&-form
+		padding-top: 2rem
+		input
+			width: 222px
+			font-family: Roboto
+			color: #ffffff
+			font-size: 0.875em
+			font-weight: 300
+			line-height: 1.857
+			text-align: left
+			border-width: 1px
+			border-color:  #ffffff
+			border-style: solid
+			opacity: 0.5
+			padding: 11px 20px
+			margin-top: 1px
+			background: transparent
+		button
+			border-width: 1px
+			border-color: #ffffff
+			border-style: solid
+			background-color: #ffffff
+			opacity: 0.5
+			padding: 9px 15px
+	&-links
+		padding-top: 3rem
+		i
+			display: inline-block
+			color: #fff	
+			padding: 4px 4px
+			border: 1px solid #fff
+			border-radius: 50%
+			margin-right: .5rem
+	&-list
+		text-align: left
+		padding: 0
+		li
+			display: inline-block
+			margin-right: 2rem
+			font-family: Roboto
+			color:  #ffffff
+			font-size: 0.875em
+			font-weight: 400
+			line-height: 1.857
+			text-align: left
+			text-transform: uppercase
+		li a
+			color:  #ffffff
+	&-copy
+		font-family: Roboto
+		color:  #ffffff
+		font-size: 0.875em
+		font-weight: 400
+		line-height: 1.857
+		text-align: right	
 
-@media (max-width: 959px)
+
+@media (max-width: 960px)
 	.container-960
 		width: 100%
 	.left, .right, .bottom
@@ -377,7 +530,17 @@ li.slick-active
 	.works-link
 		text-align: left
 		padding-top: .01rem
-		.works-link > img
-			padding-left: 10px
+	.works-link > img
+		padding-left: 10px
 	.testimonials
 		min-height: 700px
+	.contact-header
+		text-align: center
+	.client-header
+		text-align: center
+		padding-left: 0
+	.contact-form input, .contact-form textarea
+		width: 100%
+	.contact-form
+		text-align: center
+		padding: 20px 45px
