🔴 |  Next 3 blocks of website

--- a/bicycle/css/style.css
+++ b/bicycle/css/style.css
@@ -1,100 +1,3 @@
-.header {
-	background-image: url(../img/header-img.jpg);
-	background-repeat: no-repeat;
-	background-position: top center;
-	background-size: cover;
-	width: 100%;
-	height: 100vh;
-}
+html{font-size:10px}.header{background-image:url(../img/header-img.jpg);background-repeat:no-repeat;background-position:top center;background-size:cover;width:100%;height:100vh}.header-top{height:155px}.header-menu{text-align:center;padding-top:35px}.header-menu-item{display:none;font-family:"Lato",sans-serif;color:#4d4959;font-size:13px;font-weight:700;text-align:left;text-transform:uppercase;list-style:none;margin-left:10px;margin-right:15px}.header-menu-item a{color:#4d4959}.header-logo{display:inline-block;margin-right:10px}.generation{background-color:#f7f7f7;width:100%;height:450px}.generation-icon{display:block;margin:0 auto;padding-top:100px;padding-bottom:35px}.generation-heading{font-family:"Lato",sans-serif;color:#353638;font-size:18px;font-weight:700;text-align:center;text-transform:uppercase}.generation-about{font-family:"Lato",sans-serif;color:#848789;font-size:18px;font-weight:400;line-height:34px;text-align:center;margin-top:25px;padding-bottom:90px}.oliva{width:100%;height:600px}.oliva-bg{background-image:url(../img/oliva-bicycle.jpg);background-repeat:no-repeat;background-size:cover;position:relative;height:600px}.oliva-bg img{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%)}.oliva-info{height:400px;position:relative}.oliva-info:after{content:"";position:absolute;border-left:16px solid transparent;border-right:16px solid transparent;border-top:15px solid #fff;width:0px;height:0px;bottom:-15px;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%)}.oliva-icon{display:block;margin:0 auto;padding-top:70px}.oliva-heading{font-family:"Lato",sans-serif;color:#353638;font-size:18px;font-weight:700;text-align:center;text-transform:uppercase;letter-spacing:2px;margin-top:30px}.oliva-about{width:80%;display:block;margin:0 auto;font-family:"Lato",sans-serif;color:#848789;font-size:16px;font-weight:400;line-height:30px;text-align:center;margin-top:30px;margin-bottom:25px}.oliva-line{background-color:rgba(53,55,56,0.2);width:50px;height:1px;margin:0 auto}.oliva-saddle{background-image:url(../img/oliva-img.jpg);background-repeat:no-repeat;background-size:cover;height:200px}.boriosa{width:100%;height:600px}.boriosa-info{height:400px;position:relative}.boriosa-info:after{content:"";position:absolute;border-left:16px solid transparent;border-right:16px solid transparent;border-top:15px solid #fff;width:0px;height:0px;bottom:-15px;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%)}.boriosa-icon{display:block;margin:0 auto;padding-top:70px}.boriosa-heading{font-family:"Lato",sans-serif;color:#353638;font-size:18px;font-weight:700;text-align:center;text-transform:uppercase;letter-spacing:2px;margin-top:30px}.boriosa-about{width:80%;display:block;margin:0 auto;font-family:"Lato",sans-serif;color:#848789;font-size:16px;font-weight:400;line-height:30px;text-align:center;margin-top:30px;margin-bottom:25px}.boriosa-line{background-color:rgba(53,55,56,0.2);width:50px;height:1px;margin:0 auto}.boriosa-saddle{background-image:url(../img/boriosa-img.jpg);background-repeat:no-repeat;background-size:cover;height:200px}.boriosa-bg{background-image:url(../img/boriosa-bicycle.jpg);background-repeat:no-repeat;background-size:cover;position:relative;height:600px}.boriosa-bg img{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%)}.hulot{height:600px}.hulot-logo-wrapper{background-image:url("../img/hulot-logo-wrapper.jpg");background-size:cover;position:relative;height:600px}.hulot-logo{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%)}.hulot-info{height:400px;position:relative}.hulot-info:after{content:"";position:absolute;border-left:16px solid transparent;border-right:16px solid transparent;border-top:15px solid #fff;width:0px;height:0px;bottom:-15px;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%)}.hulot-info-img{background-image:url("../img/hulot-info-img.jpg");background-size:cover;height:200px}.hulot-icon{display:block;margin:0 auto;padding-top:60px}.hulot-heading{font-family:"Lato",sans-serif;color:#353638;font-size:18px;font-weight:700;text-align:center;text-transform:uppercase;letter-spacing:2px;margin-top:20px}.hulot-about{width:80%;display:block;margin:0 auto;font-family:"Lato",sans-serif;color:#848789;font-size:16px;font-weight:400;line-height:30px;text-align:center;margin-top:25px;margin-bottom:40px}.hulot-line{background-color:rgba(53,55,56,0.2);width:50px;height:1px;margin:0 auto}.hulot-bicycle{background-image:url("../img/hulot-bicycle.jpg");background-size:cover;height:600px}
 
-.header-top {
-	height: 155px;
-}
-
-.header-menu {
-	text-align: center;
-	padding-top: 35px;
-}
-
-.header-menu-item {
-	display: none;
-	font-family: 'Lato', sans-serif;
-	color:  #4d4959;
-	font-size: 13px;
-	font-weight: 700;
-	text-align: left;
-	text-transform: uppercase;
-	list-style: none;
-	margin-left: 10px;
-	margin-right: 15px; 
-}
-
-.header-menu-item a {
-	color:  #4d4959;
-}
-
-.header-logo {
-	display: inline-block;
-	margin-right: 10px;
-}
-
-.generation {
-	background-color:  #f7f7f7;
-	width: 100%;
-	height: 450px;
-}
-
-.generation-icon {
-	display: block;
-	margin: 0 auto;
-	padding-top: 100px;
-	padding-bottom: 35px;
-}
-
-.generation-heading {
-	font-family: 'Lato', sans-serif;
-	color:  #353638;
-	font-size: 18px;
-	font-weight: 700;
-	text-align: center;
-	text-transform: uppercase;
-}
-
-.generation-about {
-	font-family: 'Lato', sans-serif;
-	color:  #848789;
-	font-size: 18px;
-	font-weight: 400;
-	line-height: 34px;
-	text-align: center;
-	margin-top: 25px;
-	padding-bottom: 90px;
-}
-
-.oliva {
-	width: 100%;
-	height: 600px;
-}
-
-.oliva-bicycle {
-	background-image: url(../img/bicycle1.jpg);
-	background-repeat: no-repeat;
-	position: relative;
-	height: 600px;
-}
-
-.oliva-bicycle img{
-	position: absolute;
-	top: 40%;
-	left: 40%;
-}
-
-.oliva-about {
-	height: 400px;
-}
-
-.oliva-img {
-	background-image: url(../img/oliva-img.jpg);
-	background-repeat: no-repeat;
-	height: 200px;
-}
+/*# sourceMappingURL=style.css.map */
