--- a/purified/sass/style.sass
+++ b/purified/sass/style.sass
@@ -52,7 +52,11 @@ a, a:hover
 
   transform: translateX(100%)
 
+  transition: ease .5s
+
   &--not-hidden
+
+    transition: ease .5s
 
     transform: translateX(0%)
 
