--- a/purified/css/fontello.css
+++ b/purified/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?66377906');
-  src: url('../font/fontello.eot?66377906#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?66377906') format('woff2'),
-       url('../font/fontello.woff?66377906') format('woff'),
-       url('../font/fontello.ttf?66377906') format('truetype'),
-       url('../font/fontello.svg?66377906#fontello') format('svg');
+  src: url('../font/fontello.eot?29988491');
+  src: url('../font/fontello.eot?29988491#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?29988491') format('woff2'),
+       url('../font/fontello.woff?29988491') format('woff'),
+       url('../font/fontello.ttf?29988491') format('truetype'),
+       url('../font/fontello.svg?29988491#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?66377906#fontello') format('svg');
+    src: url('../font/fontello.svg?29988491#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-r:before { content: '\e800'; } /* '' */
 .icon-tw:before { content: '\f099'; } /* '' */
 .icon-fb:before { content: '\f09a'; } /* '' */
 .icon-gp:before { content: '\f0d5'; } /* '' */
