--- a/purified/sass/style.sass
+++ b/purified/sass/style.sass
@@ -1,10 +1,16 @@
 // Variables
+$black-text: #222
+$features-text: #e1e1e1
 $second-color: #fd3e4f
 
 $main-font: 'Poppins', sans-serif
 $sub-font: 'Playfair Display', serif
 
 // Global styles
+
+*
+
+  transition: ease 0.5s
 
 .poppins
 
@@ -46,7 +52,7 @@ a, a:hover
 
   align-items: center
 
-  width: 50vw
+  width: 100%
 
   height: 100vh
 
@@ -54,7 +60,7 @@ a, a:hover
 
   transition: ease .5s
 
-  &--not-hidden
+  &--visible
 
     transition: ease .5s
 
@@ -352,6 +358,158 @@ a, a:hover
 
         border: 1px solid $second-color
 
+.about
+
+  background: -webkit-linear-gradient(45deg, #fd3fb3 0%, #fd3f81 30%, #fd3e4f 79%)
+  background: -moz-linear-gradient(45deg, #fd3fb3 0%, #fd3f81 30%, #fd3e4f 79%)
+  background: -o-linear-gradient(45deg, #fd3fb3 0%, #fd3f81 30%, #fd3e4f 79%)
+  background: -ms-linear-gradient(45deg, #fd3fb3 0%, #fd3f81 30%, #fd3e4f 79%)
+  background: linear-gradient(45deg, #fd3fb3 0%, #fd3f81 30%, #fd3e4f 79%)
+
+  &-inner
+
+    width: 100%
+
+    margin: 0 auto
+
+  &-content
+
+    &__main
+
+      font-size: 4rem
+
+      line-height: 75px
+
+      margin: 0
+
+      padding: 80px 0 72px 0
+
+    &__paragraph
+
+      font-size: 3.5rem
+
+      padding: 0 0 32px 0
+
+    &-wrapper
+
+      padding-bottom: 80px
+
+      text-align: right
+
+    &__link
+
+      color: #fff
+
+      text-decoration: none
+
+      font-size: 2rem
+
+      border: 2px solid #fff
+
+      border-radius: 50px
+
+      padding: 20px 40px 
+
+      &-icon
+
+        margin-left: 25px
+
+.process
+
+  &-inner
+
+    display: flex
+
+    justify-content: space-around
+
+    position: relative
+
+    width: 100%
+
+    margin: 0 auto
+
+  &-block
+
+    position: relative
+
+    padding: 0 30px
+
+    &__number-background
+
+      color: #fce0e3
+
+      font-size: 12rem
+
+      font-weight: 700
+
+      position: absolute
+
+      top: 50%
+
+      transform: translateY(-50%)
+
+      z-index: -1
+
+    &__number
+
+      display: none
+
+      color: #fce0e3
+
+      font-size: 6rem
+
+      padding-top: 70px
+
+    &__heading
+
+      padding: 108px 0 35px 0
+
+      font-size: 2rem
+
+      color: #5c5c5c
+
+    &__paragraph
+
+      @extend .playfair
+
+      font-size: 1.4rem
+
+      color: #5c5c5c
+
+      padding-bottom: 50px
+
+    &:hover
+
+      background: linear-gradient(45deg, #fd3e4f 0%, #fd3f81 60%, #fd3fb3 100%)
+
+      & .process-block__number
+
+        display: block
+
+      & .process-block__heading
+
+        color: #fff
+
+        padding: 30px 0
+
+      & .process-block__paragraph
+
+        color: #fff
+
+        padding-bottom: 70px
+
+
+
+      
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 992px)
 
   .header
@@ -370,7 +528,15 @@ a, a:hover
 
           display: block
 
+  .process-inner
+
+    flex-direction: column
+
 @media only screen and (max-width: 800px) 
+
+  .mobile-navigation__item, .mobile-navigation__close
+
+    font-size: 2rem
 
   .header
 
@@ -384,26 +550,24 @@ a, a:hover
 
 @media (min-width: 576px)
   
-  .header__inner
+  .header__inner, .about-inner, .process-inner
   
     max-width: 540px
 
 @media (min-width: 768px)
 
-  .header
-    
-    &__inner
+  .header__inner, .about-inner, .process-inner
     
       max-width: 720px
 
 @media (min-width: 992px)
   
-  .header__inner
+  .header__inner, .about-inner, .process-inner
   
     max-width: 960px
 
 @media (min-width: 1200px)
   
-  .header__inner
+  .header__inner, .about-inner, .process-inner
   
     max-width: 1140px
