--- a/purified/css/style.css
+++ b/purified/css/style.css
@@ -1,5 +1,5 @@
 * {
-  transition: ease 0.5s; }
+  transition: ease-in-out 0.5s; }
 
 .poppins, body {
   font-family: "Poppins", sans-serif; }
@@ -185,26 +185,28 @@ a, a:hover {
   .about-inner {
     width: 100%;
     margin: 0 auto; }
-  .about-content__main {
-    font-size: 4rem;
-    line-height: 75px;
-    margin: 0;
-    padding: 80px 0 72px 0; }
-  .about-content__paragraph {
-    font-size: 3.5rem;
-    padding: 0 0 32px 0; }
-  .about-content-wrapper {
-    padding-bottom: 80px;
-    text-align: right; }
-  .about-content__link {
-    color: #fff;
-    text-decoration: none;
-    font-size: 2rem;
-    border: 2px solid #fff;
-    border-radius: 50px;
-    padding: 20px 40px; }
-    .about-content__link-icon {
-      margin-left: 25px; }
+  .about-content {
+    padding: 0 15px; }
+    .about-content__main {
+      font-size: 4rem;
+      line-height: 75px;
+      margin: 0;
+      padding: 80px 0 72px 0; }
+    .about-content__paragraph {
+      font-size: 3.5rem;
+      padding: 0 0 32px 0; }
+    .about-content-wrapper {
+      padding-bottom: 80px;
+      text-align: right; }
+    .about-content__link {
+      color: #fff;
+      text-decoration: none;
+      font-size: 2rem;
+      border: 2px solid #fff;
+      border-radius: 50px;
+      padding: 20px 40px; }
+      .about-content__link-icon {
+        margin-left: 25px; }
 
 .process-inner {
   display: flex;
@@ -247,6 +249,42 @@ a, a:hover {
       color: #fff;
       padding-bottom: 70px; }
 
+.team-inner {
+  width: 100%;
+  margin: 0 auto; }
+  .team-inner__main {
+    padding: 85px 0;
+    margin: 0;
+    font-size: 4rem;
+    color: #222; }
+.team-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .team-list-block:hover .team-img-info {
+    display: flex; }
+.team-img {
+  position: relative; }
+  .team-img-info {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: linear-gradient(0deg, #fd3fb3 0%, #fd3f81 30%, #fd3e4f 79%);
+    opacity: 0.8;
+    border: none;
+    border-radius: 5px;
+    top: 0;
+    left: 0; }
+    .team-img-info-socials {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex; }
+
 @media only screen and (max-width: 992px) {
   .header__top-navigation {
     display: none; }
@@ -264,16 +302,16 @@ a, a:hover {
   .header__content-paragraph {
     font-size: 4rem; } }
 @media (min-width: 576px) {
-  .header__inner, .about-inner, .process-inner {
+  .header__inner, .about-inner, .process-inner, .team-inner {
     max-width: 540px; } }
 @media (min-width: 768px) {
-  .header__inner, .about-inner, .process-inner {
+  .header__inner, .about-inner, .process-inner, .team-inner {
     max-width: 720px; } }
 @media (min-width: 992px) {
-  .header__inner, .about-inner, .process-inner {
+  .header__inner, .about-inner, .process-inner, .team-inner {
     max-width: 960px; } }
 @media (min-width: 1200px) {
-  .header__inner, .about-inner, .process-inner {
+  .header__inner, .about-inner, .process-inner, .team-inner {
     max-width: 1140px; } }
 
 /*# sourceMappingURL=style.css.map */
